clean up, add flyodhub deployment, began lsun impl (#6)
* reorganized repo
* completed docstrings for encoder/decoder/ae
* reorganize trainer files and readme docs
* update mnist example
* updated readme with results
* add lsun example
* WIP lsun experiment

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
+# 3rd Party Files
+.floydexpt
+.floydignore
+**/*.floyddata
+**/*.zip
+**/*.mdb
+**/*cache*
+
+
 # Mac OS
 *.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
